[package]
name = "scrapyard-converter"
version = "0.1.0"
authors = ["Petr Hodina <hodinapetr46@gmail.com>"]
description = "Convert various MCU configuration files to JSON format used by scrapyard"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/phodina/scrapyard-converter"
homepage = "https://github.com/phodina/scrapyard-converter"

[dependencies]
scrapyard-core = "0.1.0"
clap = "2.31.1"
serde = "1.0.33"
serde_json = "1.0.11"
serde_derive = "1.0.33"
serde-xml-rs = "0.2.1"
either = {version ="1.4.0", features=["serde"]}
regex = "0.2"
lazy_static = "1.0.0"
error-chain = "0.11.0"
